# FFmpegDemo

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/libs/include/ffmpeg/libavcodec/: avcodec.h  avdct.h  dv_profile.h  qsv.h  vaapi.h  vdpau.h  version.h  xvmc.h
app/libs/include/ffmpeg/libavdevice/: avdevice.h  version.h
app/libs/include/ffmpeg/libavfilter/: avfilter.h  avfiltergraph.h  version.h
app/libs/include/ffmpeg/libavformat/: avformat.h  avio.h  version.h
app/libs/include/ffmpeg/libpostproc/: postprocess.h  version.h
app/libs/include/ffmpeg/libswresample/: swresample.h  version.h
app/libs/include/ffmpeg/libswscale/: swscale.h  version.h
app/src/androidTest/java/com/example/lammy/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegVideoPlayer.cpp  FFmpegVideoPlayer.h  IFFmpegVideoPlayer.cpp  native-lib.cpp
app/src/main/java/com/example/lammy/ffmpegdemo/: FFmepgVideoPlayer.java  FFmpegUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
